# satio-pc

./: .gitignore  README.md  pyproject.toml  setup.py  setup.py-bak
notebooks/: 20230227-hvplot.ipynb
notebooks/dev/: 20230119-patches_extraction.ipynb  20230227-features_computation_CDI_KClouds.ipynb  20230403-habitat_features_extract.ipynb  20230407-sen4ldn_flux_tower_ts.ipynb  20230614-sen4ldn_test_tiles.ipynb  20230627-sen4ldn_test_tiles_debug.ipynb  20230628-sen4ldn_extraction-CLI.ipynb  20230628-sen4ldn_extraction.ipynb  20230712-training_data_extraction-parallelization.ipynb  20230713-training_data_extraction_timeseries_2020.ipynb  20230713-training_data_extraction_v2.ipynb  20230713-training_data_extraction_v3_cluster.ipynb  20231002-training_data_extraction_timeseries_2020_check.ipynb  antwerp_ndvi.ipynb  flux_plot_30_evi2.html  flux_plot_30_kndvi.html  flux_plot_41_evi2.html  flux_plot_41_kndvi.html  flux_plot_42_evi2.html  flux_plot_42_kndvi.html  flux_site_info_v0.2_CLC.gpkg  flux_tower_sites.gpkg  s2feats.py
notebooks/dev/flux_icos/: flux_plot_45_evi2.html  flux_plot_45_kndvi.html
notebooks/dev/flux_plots/: flux_plot_00_evi2.html  flux_plot_00_kndvi.html  flux_plot_01_evi2.html  flux_plot_01_kndvi.html  flux_plot_02_evi2.html  flux_plot_02_kndvi.html  flux_plot_03_evi2.html  flux_plot_03_kndvi.html  flux_plot_04_evi2.html  flux_plot_04_kndvi.html  flux_plot_05_evi2.html  flux_plot_05_kndvi.html
satio_pc/: __init__.py  cli.py  clouds.py  composite.py  errors.py  extension.py  extraction.py  features.py  geotiff.py  grid.py  indices.py  indices_alt.py  reader.py  sentinel1.py  sentinel2.py
satio_pc/indices/: __init__.py
satio_pc/layers/: __init__.py
satio_pc/preprocessing/: clouds.py  composite.py  interpolate.py  pearson.py  rescale.py  speckle.py  timer.py
satio_pc/utils/: __init__.py  azure.py
scripts/: azure.py
src/satio_pc/: __init__.py  _habitat.py  extension.py  extraction.py  geotiff.py  grid.py  reader.py  sentinel1.py  sentinel2.py
src/satio_pc/change/: __init__.py
src/satio_pc/indices/: __init__.py  fapar.py
src/satio_pc/indices/biopar/: __init__.py  config.py
src/satio_pc/layers/: __init__.py  ne_landsea_simple.fgb  sentinel2_jp2_windows.json
src/satio_pc/preprocessing/: __init__.py  clouds.py  composite.py  coregistration.py  pearson.py  rescale.py  speckle.py  timer.py
src/satio_pc/superres/: __init__.py  cv.py  improphe.py  super_image.py
src/satio_pc/utils/: __init__.py
tests/: test_geotiff.py  test_layers.py
