[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/satio_pc/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/dist",
  "/notebooks",
  "/scripts"
]

[project]
name = "satio-pc"
dynamic = ["version"]
authors = [
  {name="Daniele Zanaga"},
]
description = "Sentinel-2 features processing"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'azure-storage-blob>=12.24',
    "boto3>=1.11.9",
    'dask>=2025.1',
    'dask_image >=2024.5',
    'geopandas >= 1.0.1',
    "h5netcdf>=1.5",
    "loguru>=0.5.3",
    "numba>=0.48.0",
    'python-dateutil>=2.9',
    "rasterio>=1.1.1",
    "rio-cogeo>=5.4.1",
    "scikit-image>=0.25",
    'scipy>=1.15',
    "shapely>=2.0",
    'stackstac>=0.5',
    "xarray>=2025.1",
    "tqdm>=4.60",
    "numpy<2"
]

[dependency-groups]
lint = ["ruff>=0.9.0"]

[[tool.uv.index]]
name = "vito-artifactory"
url = "https://artifactory.vgt.vito.be/artifactory/api/pypi/python-packages/simple"
publish-url = "https://artifactory.vgt.vito.be/artifactory/api/pypi/python-packages-local/"

[tool.ruff]
exclude = ["*.ipynb"]